--- a/2017-0003 (COD).md
+++ b/2017-0003 (COD).md
@@ -44,15 +44,16 @@ Material Scope
 2. This Regulation does not apply to:
 
 (a) activities which fall outside the scope of Union law and in any event to
-    processing operations activities concerning national security and defence
-    and defence, regardless of the person carrying out those operations;
+    processing operations concerning national security and defence,
+    regardless of who is carrying out those activities whether it is a public authority
+    or a private operator acting at the request of a public authority;
 
 (b) activities of the Member States which fall within the scope of Chapter 2 of Title V of
     the Treaty on European Union;
 
 (c) electronic communications services which are not publicly available;
 
-(d) activities of competent authorities for the purposes of the prevention, investigation,
+(d) activities, including data processing activities, of competent authorities for the purposes of the prevention, investigation,
     detection or prosecution of criminal offences or the execution of criminal penalties,
     including the safeguarding against and the prevention of threats to public security;
 
@@ -213,12 +214,19 @@ Consent
     permitting electronic communications, including the retrieval and presentation of
     information on the internet.
 
+2aa. Consent directly expressed by an end-user in accordance with Paragraph (2)
+    shall prevail over software settings. Any consent requested and given by an
+    end-user to a service shall be directly implemented, without any further
+    delay, by the applications of the end user’s terminal, including where the
+    storage of information or the access of information already stored in the end-
+    user’s terminal equipment is permitted.
+
 2a. As far as the controller is not able to identify a data subject, the technical protocol
     showing that consent was given from the terminal equipment shall be sufficient to
     demonstrate the consent of the end-user according Article 8 (1) (b).
 
 3. End-users who have consented to the processing of electronic communications data
-    as set out in point (c) of Article 6b and points (a) and (b) of Article 6a shall be
+    in accordance with this Regulation shall be
 	reminded of the possibility  to withdraw their consent at periodic
     intervals of [no longer than 12 months], as long as the processing continues,
 	unless the end-user requests not to receive such reminders.
@@ -327,36 +335,21 @@ communications content only:
     iii. the location data is not used to determine the nature or characteristics
         of an end-user or to build a profile of an end-user
 
-(f) it is necessary for statistical purposes other than based on electronic
-    communications metadata that constitute location data or for scientific
-    research purposes, provided such processing is based on Union or Member State law which shall be
-    proportionate to the aim pursued and provide for specific safeguards, including
-    encryption and pseudonymisation, to protect fundamental rights and the interest of
-    the end-users. Processing of electronic communications metadata under this point
-    shall be done in accordance with paragraph 6 of Article 21 and paragraphs 1, 2 and 4
-    of Article 89 of Regulation (EU) 2016/679.
+(f) in relation to metadata other than location data, it is necessary for scientific
+    or historical research purposes or statistical purposes, provided that such
+    processing is in accordance with Union or Member State law and subject to
+    appropriate safeguards, including encryption and pseudonymisation, to
+    protect fundamental rights and the interest of the end-users and is in
+    accordance with paragraph 6 of Article 21 and paragraphs 1, 2 and 4 of
+    Article 89 of Regulation (EU) 2016/679.
 
 2a. Data processed under point e and f of paragraph 1 of this article may also be used for
     the production and disseminationof official national and European statistics to the
     extent necessary for this purpose and in accordance, respectively, with national or Union law.
 
-2. Electronic communications metadata processed pursuant to paragraph 1 (e)
-    shall not be shared by the provider with any third party without prejudice to
-    Article 6 (3) unless it has been made anonymous. Prior to processing
-    electronic communications metadata, the provider shall:
-
-(a) carry out an assessment of the impact of envisaged processing on the
-    confidentiality of communications and the privacy of end-users in
-    accordance with Article 35 of Regulation (EU) 2016/679, which may result in
-    the prior consultation of the supervisory authority in accordance with Article
-    36(1) to (3) of Regulation (EU) 2016/679;
-
-(b) inform the end-user of the envisaged processing operations based on
-    paragraph 1(e) and of the end-user’s right to object to such processing, at
-    any time, free of charge and in an easy and effective manner; and
-
-(c) implement appropriate technical and organisational measures, such as
-    pseudonymisation and encryption.
+2. Without prejudice to Article 6 (3), electronic communications metadata
+    processed pursuant to paragraph 1 (e) shall not be shared by the provider
+    with any third party unless it has been made anonymous.
 
 **Article 6c [Previous art 6(2a)]**
 *Compatible processing of electronic communications metadata*
@@ -404,28 +397,9 @@ communications content only:
     produces legal effects concerning him or her or similarly significantly affects
     him or her.
 
-3. For the purposes of paragraph 1 this Article, the providers of electronic
-    communications networks and services shall:
-
-(a) exclude electronic communications metadata that constitue location data that
-    reveal special categories of personal data pursuant to Article 9 of Regulation
-    (EU) 2016/679 from processing;
-
-(b) not share such data with third parties, unless it is made anonymous;
-
-(c) prior to the processing carry out an assessment of the impact of the envisaged
-    processing operations on the protection of electronic communications data in
-    accordance with Article 35 of Regulation (EU) 2016/679, which may result in
-    the prior and consultation of the supervisory authority in accordance with
-    Article 36(1) to (3) of Regulation (EU) 2016/679. Points (2) and (3) of Article
-    36(2) and (3) of Regulation (EU) 2016/679 shall apply to the consultation of
-    the supervisory authority; and
-
-(d) inform the end-user of specific processing on the basis of paragraph 1 of this
-    Article and give of the right to object to such processing free of charge, at any
-    time, and in an easy and effective manner. If the end-user objects, the
-    electronic communications metadata shall no longer be processed for such
-    purposes.
+3. For the purposes of paragraph 1 of this Article, the providers of electronic
+    communications networks and services shall not, without prejudice to Article
+    6 (3), share such data with any third parties, unless it is made anonymous
 
 ```
 Article 7
@@ -435,15 +409,26 @@ Storage and erasure of electronic communications data
     communications content or make that data anonymous when it is no longer necessary for
     the purpose of processing in accordance to article 6(1) and 6a(1).
 
-2. Without prejudice to points (b), (c) and (d) of Article 6(1), points (c), (d), (e), (f) and of Article 6b,
-    and Article 6c, the provider of the electronic communications service shall erase electronic
-    communications metadata or make that data anonymous when it is no longer needed
-    for the purpose of the transmission of a communication.
+2. Without prejudice to points (b), (c) and (d) of Article 6 (1), points (c), (d), (e),
+    (f), point (g) of Article 6b, Article 6c and points (b) to (g) of Article 8 (1) the
+    provider of the electronic communications service shall erase electronic
+    communications metadata or make that data anonymous when it is no longer
+    needed for the purpose of providing an electronic communication service.
 
 3. Where the processing of electronic communications metadata takes place for the
-    purpose of billing in accordance with point (b) of Article 6b, the relevant metadata
+    purpose of billing in accordance with point (b) of Article 6b (1), the relevant metadata
     may be kept until the end of the period during which a bill may lawfully be
     challenged or a payment may be pursued in accordance with national law.
+
+4. Union or Member state law may provide that the electronic communications
+    metadata is retained, including under any retention measure that respects
+    the essence of the fundamental rights and freedoms and is a necessary and
+    proportionate measure in a democratic society, in order to safeguard the
+    prevention, investigation, detection or prosecution of criminal offences or the
+    execution of criminal penalties, and the safeguarding against and the
+    prevention of threats to public security, for a limited period. The duration of
+    the retention may be extended if threats to public security of the Union or of
+    a Member State persists.
 
 ```
 Article 8
@@ -454,19 +439,19 @@ Protection of end-users' terminal equipment information
     software and hardware, other than by the end-user concerned shall be prohibited,
     except on the following grounds:
 
-(a) it is necessary for the sole purpose of carrying out the transmission of an electronic
-    communication over an electronic communications network; or
+(a) it is necessary for the sole purpose of providing an electronic
+    communication service; or
 
 (b) the end-user has given consent; or
 
 (c) it is necessary for providing a service specifically requested by the end-user; or
 
-(d) it is necessary for audience measuring, provided that such measurement is
+(d) it is necessary for the sole purpose of audience measuring, provided that such measurement is
     carried out by the provider of the service requested by the end-
-    user, or by a third party on behalf of or jointly with one or more
-    providers of the service requested or
-    provided that the conditions laid down in Article 28, or where applicable Article 26,
-    of Regulation (EU) 2016/679 are met; or
+    user, or by a third party, or by third parties jointly on behalf of or jointly
+    with provider of the service requested provided that, where applicable, the
+    conditions laid down in Articles 26 or 28 of Regulation (EU) 2016/679 are
+    met; or
 
 (da) it is necessary to maintain or restore the security of information society services or
     terminal equipment of the end-user, prevent fraud or detect technical faults for the
@@ -474,7 +459,7 @@ Protection of end-users' terminal equipment information
 
 (e) it is necessary for a software update provided that:
     (i) such update is necessary for security reasons and does not in any way change the
-    privacy settings chosen by the end-user are not changed in any way,
+    privacy settings chosen by the end-user,
     (ii) the end-user is informed in advance each time an update is being installed, and
     (iii) the end-user is given the possibility to postpone or turn off the automatic
     installation of these updates; or
@@ -483,8 +468,8 @@ Protection of end-users' terminal equipment information
     communication either to the single European emergency number ‘112’ or a national
     emergency number, in accordance with Article 13(3).
 
-(g1) it is necessary for a purpose other than that for which the information have
-    been collected under this Regulation. Where it is not based on the end-user's
+(g) where the processing for purpose other than that for which the information has
+    been collected under this paragraph is not based on the end-user's
     consent or on a Union or Member State law which constitutes a necessary
     and proportionate measure in a democratic society to safeguard the
     objectives referred to in Article 11 the person using processing and storage
@@ -494,77 +479,39 @@ Protection of end-users' terminal equipment information
     electronic communications data are initially collected, take into account, inter
     alia:
 
-(i) any link between the purposes for which the processing and storage
+    (i) any link between the purposes for which the processing and storage
     capabilities have been used or the information have been collected and
     the purposes of the intended further processing;
 
-(ii) the context in which the processing and storage capabilities have been
+    (ii) the context in which the processing and storage capabilities have been
     used or the information have been collected, in particular regarding the
     relationship between end-users concerned and the provider;
 
-(iii) the nature the processing and storage capabilities or of the collecting of
+    (iii) the nature the processing and storage capabilities or of the collecting of
     information as well as the modalities of the intended further processing,
     in particular where such intended further processing could reveal
     categories of data, pursuant to Article 9 or 10 of Regulation (EU)
     2016/679;
 
-(iv) the possible consequences of the intended further processing for endusers;
+    (iv) the possible consequences of the intended further processing for end-users;
 
-(v) the existence of appropriate safeguards, such as pseudonymisation and
-    encryption.
+    (v) the existence of appropriate safeguards, such as encryption and
+    pseudonymisation.
 
-g2. Such further processing, if considered compatible, may only take place,
+(h) Such further processing in accordance with paragraph 1 (g), if considered compatible, may only take place,
     provided that:
 
-(i) the information is erased or made anonymous as soon as it is no longer
+    (i) the information is erased or made anonymous as soon as it is no longer
     needed to fulfil the purpose,
 
-(ii) the processing is limited to information that is pseudonymised, and
+    (ii) the processing is limited to information that is pseudonymised, and
 
-(ii) the information is not used to determine the nature or characteristics of
+    (iii) the information is not used to determine the nature or characteristics of
     an end-user or to build a profile of an end-user.
 
-g3. For the purposes of this Article, the person using processing and storage
-    capabilities or collecting information processed by or emitted by or stored in the
-    end-users’ terminal equipment shall:
-
-(i) not share such information with third parties, unless it is made anonymous;
-
-(ii) prior to the processing carry out an assessment of the impact of the
-    envisaged processing operations on the protection of electronic
-    communications data in accordance with Article 35 of Regulation (EU)
-    2016/679, which may result in the prior and consultation of the supervisory
-    authority in accordance with Article 36(1) to (3) of Regulation (EU)
-    2016/679; and
-
-(iii) inform the end-user of specific processing on the basis of this Article and
-    of the right to object to such processing free of charge, at any time, and in
-    an easy and effective manner. If the end-user objects, the information shall
-    no longer be processed for such purposes.
-
-g4. Service providers using processing and storage capabilities of the end-user’s
-    terminal equipment or collecting information from the end-user’s terminal
-    equipment pursuant to paragraph 1(g) shall not share the information with
-    any third party other than its processors, acting in accordance with Article
-    28 of Regulation (EU) 2016/679 mutatis mutandis, unless it has been made
-    anonymous. Prior to any use of processing or storage facilities in, or
-    collection of information from the end-user’s terminal equipment, the service
-    provider shall:
-
-i carry out an assessment of the impact of the use of the processing and storage
-    capabilities or the collection of information from the end-users’ terminal
-    equipment and of the envisaged processing on the confidentiality of
-    communications and the privacy of end-users in accordance with Article 35
-    of Regulation (EU) 2016/679, which may result in the prior consultation of
-    the supervisory authority in accordance with Article 36(1) to (3) of
-    Regulation (EU) 2016/679;
-
-ii inform the end-user of the envisaged processing operations based on
-    paragraph 1(g) and of the end-user’s right to object to such processing, free
-    of charge, at any time, and in an easy and effective manner; and
-
-iii implement appropriate technical and organisational measures, such as
-    pseudonymisation and encryption.
+(i) For the purposes of paragraph 1 (g) and (h), data shall not be shared with any
+    third parties unless the conditions laid down in Article 28 of Regulation (EU)
+    2016/697 are met, or data is made anonymous.
 
 2. The collection of information emitted by terminal equipment of the end-user to enable it to connect
     to another device and, or to network equipment shall be prohibited, except on the
@@ -582,7 +529,7 @@ iii implement appropriate technical and organisational measures, such as
 (d) it is necessary for providing a service requested by the end-user.
 
 2a. For the purpose of paragraph 2 points (b) and (c), a clear and prominent notice shall
-    displayed informing of, at least, the modalities of the
+    be displayed informing of, at least, the modalities of the
     collection, its purpose, the person responsible for it and the other information
     required under Article 13 of Regulation (EU) 2016/679 where personal data are
     collected, as well as any measure the end-user of the terminal equipment can take to
@@ -625,7 +572,7 @@ Restrictions
 
 ## CHAPTER III
 
-## NATURAL AND LEGAL PERSONS' RIGHTS TO CONTROL
+## END-USERS' RIGHTS TO CONTROL
 
 ## ELECTRONIC COMMUNICATIONS
 
@@ -684,13 +631,15 @@ to emergency communications
     emergency communications, including public safety answering points, for the purpose
     of responding to such communications.
 
-3. Notwithstanding Article 8(1), regardless of whether the end-user has prevented access to the terminal equipment’s
-    Global Navigation Satellite Systems (GNSS) capabilities or other types of
-    terminal equipment based location data through the terminal
-    equipment settings, when a call is made to emergency services, such settings may not
-    prevent access to such location data to determine and provide the calling end-user's location to
-    an organisation dealing with emergency communications, including public safety 
-    answering points for the purpose of responding to such calls.
+3. Notwithstanding Article 8(1), regardless of whether the end-user has
+    prevented access to the terminal equipment’s Global Navigation Satellite
+    Systems (GNSS) capabilities or other types of terminal equipment based
+    location data through the terminal equipment settings, when a call is made to
+    emergency services, such settings may not prevent access to GNSS such
+    location data to determine and provide the caller calling end-user's location
+    to emergency services an organisation dealing with emergency
+    communications, including public safety answering points, for the purpose of
+    responding to such calls.
 
 ```
 Article 14
@@ -763,7 +712,7 @@ Publicly available directories
 Article 16
 Unsolicited and direct marketing communications
 ```
-1. Natural or legal persons y shall be prohibited from using electronic communications services for the
+1. Natural or legal persons shall be prohibited from using electronic communications services for the
     purposes of sending direct marketing communications to end-users who are natural
     persons unless they have given their consent.
 
@@ -791,7 +740,7 @@ Unsolicited and direct marketing communications
     call in addition to the obligation set out in paragraph 3. Member State requiring
     the use of such a specific code or prefix shall make it available for the natural or
     legal persons who use electronic communications services for the purposes of
-    direct marketing calls
+    direct marketing calls.
 
 4. Notwithstanding paragraph 1, Member States may provide by law that the placing of
     direct marketing voice-to-voice calls to end-users who are natural persons shall only
@@ -859,7 +808,7 @@ European Data Protection Board
     2016/679, shall have the task to contribute to the consistent application of
     Chapters I II and III of this Regulation.
 
-2. The Board shall also have the following tasks:
+2. To that end, the Board shall also have the following tasks:
 
 (a) advise the Commission on any proposed amendment of this Regulation;
 
@@ -882,8 +831,8 @@ European Data Protection Board
     this paragraph on the provision of consent in the context of Articles 6 to 6b and 8 of this
     Regulation by end-users who are legal persons or in an employment relationship;
 
-(e) [provide the Commission with an opinion on the icons referred to in paragraph 3 of
-    Article 8];
+(e) provide the Commission with an opinion on the icons referred to in paragraph 3 of
+    Article 8;
 
 (h) promote the exchange of knowledge and documentation on legislation on protection
     of electronic communications of end-users and of the integrity of their terminal
@@ -920,11 +869,12 @@ Each supervisory authority shall contribute to the consistent application of thi
 Article 21
 Remedies
 ```
-1. Without prejudice to any other administrative or judicial remedy, every end-user 
-    services shall have the right to an effective judicial remedy in
-    relation to any infringement of rights under this Regulation, the right to
-    lodge a complaint with a supervisory authority and the right to an effective judicial
-    remedy against any decision of a supervisory authority. 
+1. Without prejudice to any other administrative or judicial remedy, every end-user
+    shall have the right to an effective judicial remedy in relation to any
+    infringement of rights under this Regulation, the right to lodge a complaint
+    with a supervisory authority and the right to an effective judicial remedy
+    against any legally binding decision of a supervisory authority concerning
+    them. 
 
 1a. Articles 77-80 of Regulation (EU) 2016/679 shall apply mutatis mutandis.
 
@@ -1094,7 +1044,7 @@ Entry into force and application
 1. This Regulation shall enter into force on the twentieth day following that of its
     publication in the _Official Journal of the European Union_.
 
-2. This Regulation shall apply from [12 months from the date of entry into force of this Regulation].
+2. This Regulation shall apply from [24 months from the date of entry into force of this Regulation].
 
 This Regulation shall be binding in its entirety and directly applicable in all Member States.
 
